Sat Mar  5 09:31:57 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tools/IDL3_to_IDL2/basic_visitor.cpp:
        * tools/IDL3_to_IDL2/idl3_to_idl2_visitor.cpp:
          Generate space after sequence< to silence Intel C++ warnings

Thu Mar  3 14:26:13 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * etc/ciao_dds4ccm.doxygen:
          Ignore DDS_ as prefix

Thu Mar  3 05:03:44 UTC 2011  William R. Otte  <r._w@local>

        * tests/DAnCE/LocalityManager/UnexpectedShutdown/nodemanager-besteffort.lconfig:
        * tests/DAnCE/LocalityManager/UnexpectedShutdown/run_test.pl:

          Convert from --best-effort.

Wed Mar  2 14:56:28 UTC 2011  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * tools/IDL3_to_IDL2/idl3_to_idl2_visitor.cpp:
          Made use of transfer_scope_elements() defined in ast_home.

Tue Feb 15 10:11:12 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * tests/CIF/Events/client.cpp:
          Added quotes.

Tue Feb 15 10:07:30 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * tests/CIF/Events/client.cpp:
          Resolved issues related to include paths.

Tue Feb 15 09:20:07 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/ciao_tests.lst:
          One dds test should now run again

Mon Feb 14 08:35:26 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * tests/CIF/Events/client.cpp:
          Resolved warnings in case lw ccm.

Fri Feb 11 11:16:00 UTC 2011  Martin Corino  <mcorino@remedy.nl>

        Merged changes from Remedy work branch.

        === start changelog ===

        Thu Feb 10 09:59:48 UTC 2011  Marcel Smit  <msmit@remedy.nl>

                * bin/generate_component_mpc.pl:
                  Fixed the afters for the servants.

                * tutorials/Quoter/Simple/Broker/StockBroker.mpc:
                * tutorials/Quoter/Simple/Distributor/StockDistributor.mpc:
                  Regenerated using the latest generate_component_mpc
